--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 VITE_SUPABASE_URL=your-project-url.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
-VITE_SITE_URL=http://localhost:5173  # Use https://huewave.co for production
+VITE_SITE_URL=http://localhost:5173  # Use your production URL for production
